# pyfatura

./: .gitignore  LICENSE  README.md  pyproject.toml
pyfatura/: __init__.py  client.py  models.py
tests/: test_client.py  test_models.py
